k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: metrics.local
    http:
      paths:
      - path: /(metrics|analytics)
        pathType: ImplementationSpecific
        backend:
          service:
            name: metrics-service
            port:
              number: 8080
